[project]
name = "album-pi"
version = "2.0.0"
description = "Beautiful album art display system for Raspberry Pi with smooth transitions and configurable overlays"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Album Pi Contributors" }
]
keywords = ["raspberry-pi", "album-art", "music", "display", "pygame"]

dependencies = [
    "pygame>=2.1.0",
    "flask>=2.0.0",
    "requests>=2.28.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "qrcode[pil]>=7.3.1",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
blur = [
    "scipy>=1.7.0",  # For better blur effects
]

[project.urls]
Homepage = "https://github.com/jbuchanan/album-pi"
Repository = "https://github.com/jbuchanan/album-pi"
Issues = "https://github.com/jbuchanan/album-pi/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
